Finished second section of page (mobile and desktop)

--- a/index.html
+++ b/index.html
@@ -35,6 +35,89 @@
             </div>
         </section>
 
+        <section class="second-section">
+            <div class="what-we-do-section">
+
+                <h4> What we do </h4>
+                <h3> Company Certifications </h3>
+
+                <p>
+                    Our company offers a variety of services to meet your project&rsquo;s
+                    needs, to take you from collaboration meetings all the way to 
+                    ribbon-cutting and beyond. We believe that every project is unique,
+                    and can customize our approach to fit your particular project. 
+
+                </p>
+
+                <div class="workers">
+
+                    <div>
+
+                        <img src="/img/man.png" alt="construciton man">
+                        <h3> Healthcare Building </h3>
+                        <p>
+                            Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                        </p>
+
+                    </div>
+
+                    <div>
+
+                        <img src="/img/man.png" alt="construciton man">
+                        <h3> Healthcare Building </h3>
+                        <p>
+                            Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                        </p>
+
+                    </div>
+
+                    <div>
+
+                        <img src="/img/man.png" alt="construciton man">
+                        <h3> Healthcare Building </h3>
+                        <p>
+                            Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                        </p>
+
+                    </div>
+
+                    <div>
+
+                        <img src="/img/man.png" alt="construciton man">
+                        <h3> Healthcare Building </h3>
+                        <p>
+                            Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                        </p>
+
+                    </div>
+
+                    <div>
+
+                        <img src="/img/man.png" alt="construciton man">
+                        <h3> Healthcare Building </h3>
+                        <p>
+                            Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                        </p>
+
+                    </div>
+
+                    <div>
+
+                        <img src="/img/man.png" alt="construciton man">
+                        <h3> Healthcare Building </h3>
+                        <p>
+                            Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                        </p>
+
+                    </div>
+
+
+                </div>
+
+
+            </div>
+        </section>
+
     </body>
 
 
