--- a/index.html
+++ b/index.html
@@ -118,6 +118,71 @@
             </div>
         </section>
 
+        
+        <section class="third-section">
+
+            <div class="worker-div">
+                <div class="left-div">
+
+                   <img src="img/workingman.png" alt="man with helmet icon">
+
+                    <h3> Healthcare building </h3>
+
+                    <p>
+                        Tiling is an effective way to add elegance & style to
+                        any bath or kitchen Yellow Hats Remodeling Team specializes in tile
+                        installation and works directly with each.
+                    </p>
+
+                    <button> READ MORE </button>
+
+
+                </div>
+
+                <div class="machine">
+                    <img src="img/machine.png" alt="truck working">
+                </div>
+
+            </div>
+
+            <div class="factory-div">
+                <img src="img/factory.png" alt="factory icon">
+                <span> Education Building </span>
+            </div>
+
+            <div class="cog-div">
+                <img src="img/cog.png" alt="cog and screwdriver">
+                <span> Government building </span>
+            </div>
+
+
+        </section>
+
+        <section class="footer">
+
+            <div>
+                <span> 
+                    Contact us today to plan your boat&rsquo;s maintenance or repair procedure.
+                </span>
+                
+                <h3> 4262 Richison Drive, Missoula, MT 59801 </h3>
+            </div>
+
+
+            <div>
+                <h3> Contact Us </h3>
+
+                <span>
+                    Freephone: &nbsp;  +1 800 559 6580 <br>
+                    Telephone: &nbsp;  +1 800 603 6035 <br>
+                    Fax:       &nbsp;         +1 800 889 9898 <br>
+                </span>
+
+
+            </div>
+
+        </section>
+
     </body>
 
 
