Finished all sections.

--- a/index.html
+++ b/index.html
@@ -158,6 +158,36 @@
 
         </section>
 
+
+        <section class="map-section">
+
+            <div class="map-div">
+                <img src="img/map.png" alt="world map">
+            </div>
+
+            <div class="right-div">
+
+                <h4> Elvo Construction </h4>
+
+                <h3> The best world team </h3>
+
+                <p> 
+
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Maecenas gravida cursus eleifend. Nullam ornare sapien quis
+                    vulputate cursus. Vivamus vel pellentesque purus, sed dignissim elit.
+                    Maecenas ac augue metus. Suspendisse in elit nibh. Vestibulum in nibh risus.
+                    Phasellus ut cursus sem.
+
+                </p>
+
+                <button> READ MORE </button>
+
+            </div>
+
+
+        </section>
+
         <section class="footer">
 
             <div>
@@ -182,6 +212,10 @@
             </div>
 
         </section>
+
+
+
+        
 
     </body>
 
