Adding tags to make templates customizable.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
     <head>
-        <title> Industrial park </title>
+        <title> [name] </title>
         <link rel="stylesheet" href="css/main.css">
         <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -11,12 +11,12 @@
         
         <section class="top">
 
-            <h1> Business and industrial parks </h1>
+            <h1> [name] </h1>
             <img src="img/place.jpg" alt="image of business industrial park">
 
             <div class="top-div">
                 <div class="top-content">
-                    <h2> Construction Machinery Co. </h2>
+                    <h2> [name] Co. </h2>
                     <h3> We have a proud tradition of service as a general contractor since 1974 </h3>
 
                     <p> We headquartered in San Diego, brings over 42 years of local and national construction
@@ -53,7 +53,7 @@
 
                     <div>
 
-                        <img src="/img/man.png" alt="construciton man">
+                        <img src="img/man.png" alt="construciton man">
                         <h3> Healthcare Building </h3>
                         <p>
                             Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit
@@ -63,7 +63,7 @@
 
                     <div>
 
-                        <img src="/img/man.png" alt="construciton man">
+                        <img src="img/man.png" alt="construciton man">
                         <h3> Healthcare Building </h3>
                         <p>
                             Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit
@@ -73,7 +73,7 @@
 
                     <div>
 
-                        <img src="/img/man.png" alt="construciton man">
+                        <img src="img/man.png" alt="construciton man">
                         <h3> Healthcare Building </h3>
                         <p>
                             Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit
@@ -83,7 +83,7 @@
 
                     <div>
 
-                        <img src="/img/man.png" alt="construciton man">
+                        <img src="img/man.png" alt="construciton man">
                         <h3> Healthcare Building </h3>
                         <p>
                             Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit
@@ -93,7 +93,7 @@
 
                     <div>
 
-                        <img src="/img/man.png" alt="construciton man">
+                        <img src="img/man.png" alt="construciton man">
                         <h3> Healthcare Building </h3>
                         <p>
                             Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit
@@ -103,7 +103,7 @@
 
                     <div>
 
-                        <img src="/img/man.png" alt="construciton man">
+                        <img src="img/man.png" alt="construciton man">
                         <h3> Healthcare Building </h3>
                         <p>
                             Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit
